--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,5 @@ cache:
   directories:
     - $HOME/.gradle/caches/
     - $HOME/.gradle/wrapper/
-install: gradlew desktop:run
+before_install:
+  - chmod +x gradlew
